--- a/nuxt-ui-app/package.json
+++ b/nuxt-ui-app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt-lodash": "^2.5.3"
   }
