--- a/nuxt-ui-app/package.json
+++ b/nuxt-ui-app/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/ui": "^2.13.0",
+    "@nuxtjs/supabase": "^1.2.2",
     "@vueuse/core": "^10.9.0",
     "nuxt": "^3.10.1"
   },
